# arc-agi-compression-experiments

./: .gitignore  README.md  pyproject.toml
checkpoints/: conv_vqvae_6x6x64_b0.pt  conv_vqvae_6x6x64_b005.pt  conv_vqvae_6x6x64_b1.pt  conv_vqvae_6x6x64_b2.pt  conv_vqvae_batchnorm_6x6x64.pt  conv_vqvae_batchnorm_em128.pt  conv_vqvae_batchnorm_epoch.pt  ppca_50.pkl
src/: main.py
src/data/: arc_dataset.py  augmentations.py  pair_dataset.py  scale_processing.py
src/eda/: EDA.html  EDA.ipynb
src/models/: abstract_vae.py  abstract_vqvae.py  attention_solver.py  convolutional_vae.py  convolutional_vae_v2.py  convolutional_vae_v2_60x30.py  convolutional_vae_v2_contrastive.py  convolutional_vae_v2_pixelcnn.py  convolutional_vae_v2_vampprior.py  convolutional_vae_v3.py  convolutional_vqvae.py  fully_connected_vae.py  grid_augmentations.py  latent_solver.py  paddedgrid_vae.py  pipeline.py  ppca.py  ppca_pipeline.py  train_pca.py  vq_pipeline.py  wavelet_pipeline.py
src/notebooks/: compression.ipynb  granulometry.ipynb  input_space_clustering.ipynb  latent_space.ipynb  latent_space_object_compositionality.ipynb  latent_space_transformations.ipynb  poc_vae.ipynb  reconstruction.ipynb  solver.ipynb  solver_60x30.ipynb  solver_attention.ipynb  solver_latent.ipynb  solver_latent_space.ipynb  test.ipynb  vae.py
src/utils/: latent_space.py  latent_space_clusters.py  linear_solver.py  load_data.py  train_60x30.py  train_vae.py  train_vae_contrastive.py  train_vae_vampprior.py  train_vqvae.py  view.py
